--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1105,7 +1105,7 @@ audio {
 	100% {
 		-ms-transform:translate(0px,0px);
 	}
-}o
+}
 @keyframes bannar_come {
 	0%{
 		transform:translate(0px,-1000px);
